--- a/API/package.json
+++ b/API/package.json
@@ -19,6 +19,11 @@
   },
   "devDependencies": {
     "dotenv": "^16.0.0",
+    "eslint": "^7.32.0",
+    "eslint-config-standard": "^16.0.3",
+    "eslint-plugin-import": "^2.26.0",
+    "eslint-plugin-node": "^11.1.0",
+    "eslint-plugin-promise": "^5.2.0",
     "nodemon": "2.0.7"
   }
 }
