fix(API): update linter

--- a/API/package.json
+++ b/API/package.json
@@ -7,7 +7,8 @@
   "scripts": {
     "start": "node index.js",
     "dev": "nodemon API/index.js",
-    "test": "NODE_OPTIONS=--experimental-vm-modules  jest"
+    "test": "NODE_OPTIONS=--experimental-vm-modules  jest",
+    "lint": "eslint . --ext .js,.jsx,.ts,.tsx --fix"
   },
   "keywords": [],
   "author": "",
