--- a/API/package.json
+++ b/API/package.json
@@ -5,8 +5,8 @@
   "main": "index.js",
   "type": "module",
   "scripts": {
-    "start": "node index.js",
-    "dev": "nodemon API/index.js",
+    "start": "node --experimental-json-modules index.js",
+    "dev": "nodemon  --experimental-json-modules index.js",
     "test": "NODE_OPTIONS=--experimental-vm-modules  jest",
     "lint": "eslint . --ext .js,.jsx,.ts,.tsx --fix"
   },
@@ -16,6 +16,7 @@
   "dependencies": {
     "axios": "^0.26.1",
     "express": "^4.17.3",
+    "swagger-ui-express": "^4.3.0",
     "ws": "^8.5.0"
   },
   "devDependencies": {
